Девятое задание. Контрольная работа
